--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <body>
     <div id="app">
        
+        <h1>Lista di cose da fare</h1>
+        <ul>
+            <li v-for="(item, i) in toDoList">
+                {{toDoList[i].do}}
+            </li>
+        </ul>
+
     </div>
     
     <!-- JS -->
