Aggiunge funzione di controllo done or not

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        
         <h1>Lista di cose da fare</h1>
         <ul>
-            <li v-for="(item, i) in toDoList">
+            <li :class="isDone(toDoList[i].done)" v-for="(item, i) in toDoList">
                 {{toDoList[i].do}}
             </li>
         </ul>
